# openmenu

./: .clang-format  .gitignore  Announcement.txt  LICENSE.Crayon_VMU.md  LICENSE.md  Makefile  Makefile.dc  Makefile.inc  Readme.md  build_kos.sh  dat_format.h  dbgprint.h  example  example.c  kos_setup.sh  main.c  meson.build  pkg_dreamcast.sh  pkg_dreamcast_cdi.sh  sh4-dreamcast-kos  uthash.h  vm2_api.c
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: missing-boxart-metadata.md
KOS patch/: README.txt  fs_iso9660.c
backend/: Makefile  cb_loader.h  controls.p1.h  db_item.def  db_item.h  db_list.c  db_list.h  exec.s  gd_item.def  gd_item.h  gd_list.c  gd_list.h  gdemu_control.c  gdemu_sdk.c  gdemu_sdk.h  gdmenu_binary.h  gdmenu_loader.h  ini.c  ini.h  ini_opt.h  rungd.h
gdrom/: gdrom_fs.h
inc/: bloader.h  dat_format.h  dbgprint.h  uthash.h  vm2_api.h
texture/: block_pool.c  block_pool.h  dat_reader.c  lru.c  lru.h  lru_example.c  serial_sanitize.c  serial_sanitize.h  simple_texture_allocator.c  simple_texture_allocator.h  txr_manager.c  txr_manager.h
tools/: Makefile  dat_packer_interface.h  dat_packer_internal.c  menufaker.c  metapacker.c  packer.c  reader.c  renamecsv.c  stripper.c  tsv_to_txt_ini.c
ui/: animation.c  animation.h  common.h  draw_console.c  draw_console.h  draw_gamejam.c  draw_kos.c  draw_kos.h  draw_prototypes.h  font_prototypes.h  global_settings.c  global_settings.h  openmenu_lcd.h  openmenu_pal.h  openmenu_vmu.h  theme_manager.c  theme_manager.h  ui_bios.c  ui_bios.h  ui_gdmenu.c  ui_gdmenu.h  ui_grid.c  ui_grid.h  ui_line_desc.c  ui_line_desc.h  ui_line_large.c  ui_line_large.h  ui_menu_credits.c  ui_menu_credits.h  ui_scroll.c  ui_scroll.h
ui/dc/: common.h  font.c  font.h  font_bios.c  font_bitmap.c  font_bmf.c  input.c  input.h  pvr_texture.c  pvr_texture.h  text_widths.h
ui/pc/: font.c
